--- a/applications/sink/jdbc-sink/README.adoc
+++ b/applications/sink/jdbc-sink/README.adoc
@@ -54,13 +54,16 @@ $$table-name$$:: $$The name of the table to write into.$$ *($$String$$, default:
 
 === spring.datasource
 
-$$data$$:: $$Data (DML) script resource references.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$driver-class-name$$:: $$Fully qualified name of the JDBC driver. Auto-detected based on the URL by default.$$ *($$String$$, default: `$$<none>$$`)*
-$$initialization-mode$$:: $$Mode to apply when determining if DataSource initialization should be performed using the available DDL and DML scripts.$$ *($$DataSourceInitializationMode$$, default: `$$embedded$$`, possible values: `ALWAYS`,`EMBEDDED`,`NEVER`)*
 $$password$$:: $$Login password of the database.$$ *($$String$$, default: `$$<none>$$`)*
-$$schema$$:: $$Schema (DDL) script resource references.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$url$$:: $$JDBC URL of the database.$$ *($$String$$, default: `$$<none>$$`)*
 $$username$$:: $$Login username of the database.$$ *($$String$$, default: `$$<none>$$`)*
+
+=== spring.sql.init
+
+$$data-locations$$:: $$Locations of the data (DML) scripts to apply to the database.$$ *($$List<String>$$, default: `$$<none>$$`)*
+$$mode$$:: $$Mode to apply when determining whether initialization should be performed.$$ *($$DatabaseInitializationMode$$, default: `$$embedded$$`, possible values: `ALWAYS`,`EMBEDDED`,`NEVER`)*
+$$schema-locations$$:: $$Locations of the schema (DDL) scripts to apply to the database.$$ *($$List<String>$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
