--- a/applications/source/jdbc-source/README.adoc
+++ b/applications/source/jdbc-source/README.adoc
@@ -25,11 +25,8 @@ $$update$$:: $$An SQL update statement to execute for marking polled messages as
 
 === spring.datasource
 
-$$data$$:: $$Data (DML) script resource references.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$driver-class-name$$:: $$Fully qualified name of the JDBC driver. Auto-detected based on the URL by default.$$ *($$String$$, default: `$$<none>$$`)*
-$$initialization-mode$$:: $$Mode to apply when determining if DataSource initialization should be performed using the available DDL and DML scripts.$$ *($$DataSourceInitializationMode$$, default: `$$embedded$$`, possible values: `ALWAYS`,`EMBEDDED`,`NEVER`)*
 $$password$$:: $$Login password of the database.$$ *($$String$$, default: `$$<none>$$`)*
-$$schema$$:: $$Schema (DDL) script resource references.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$url$$:: $$JDBC URL of the database.$$ *($$String$$, default: `$$<none>$$`)*
 $$username$$:: $$Login username of the database.$$ *($$String$$, default: `$$<none>$$`)*
 
@@ -41,6 +38,12 @@ $$fixed-rate$$:: $$Polling rate period. Mutually exclusive with 'fixedDelay' and
 $$initial-delay$$:: $$Polling initial delay. Applied for 'fixedDelay' and 'fixedRate'; ignored for 'cron'.$$ *($$Duration$$, default: `$$<none>$$`)*
 $$max-messages-per-poll$$:: $$Maximum number of messages to poll per polling cycle.$$ *($$Integer$$, default: `$$<none>$$`)*
 $$receive-timeout$$:: $$How long to wait for messages on poll.$$ *($$Duration$$, default: `$$1s$$`)*
+
+=== spring.sql.init
+
+$$data-locations$$:: $$Locations of the data (DML) scripts to apply to the database.$$ *($$List<String>$$, default: `$$<none>$$`)*
+$$mode$$:: $$Mode to apply when determining whether initialization should be performed.$$ *($$DatabaseInitializationMode$$, default: `$$embedded$$`, possible values: `ALWAYS`,`EMBEDDED`,`NEVER`)*
+$$schema-locations$$:: $$Locations of the schema (DDL) scripts to apply to the database.$$ *($$List<String>$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 Also see the https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html[Spring Boot Documentation]
