--- a/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/index.adoc
+++ b/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/index.adoc
@@ -23,7 +23,7 @@ ifdef::backend-html5[]
 
 Version {project-version}
 
-(C) 2012-2022 Pivotal Software, Inc.
+Copyright © 2012-2022
 
 _Copies of this document may be made for your own use and for distribution to
 others, provided that you do not charge any fee for such copies and further
