--- a/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/index.adoc
+++ b/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/index.adoc
@@ -1,5 +1,5 @@
 = Spring Cloud Stream Applications Reference Guide
-Sabby Anandan; Artem Bilan; Marius Bogoevici; Eric Bottard; Mark Fisher; Ilayaperumal Gopinathan; Gunnar Hillert; Mark Pollack; Patrick Peralta; Glenn Renfro; Gary Russell; Thomas Risberg; David Turanski; Janne Valkealahti; Soby Chacko; Christian Tzolov;
+Sabby Anandan; Artem Bilan; Marius Bogoevici; Eric Bottard; Mark Fisher; Ilayaperumal Gopinathan; Gunnar Hillert; Mark Pollack; Patrick Peralta; Glenn Renfro; Gary Russell; Thomas Risberg; David Turanski; Janne Valkealahti; Soby Chacko; Christian Tzolov; Chris Bono; Corneil du Plessis
 :doctype: book
 :toc: left
 :toclevels: 4
@@ -15,13 +15,15 @@ Sabby Anandan; Artem Bilan; Marius Bogoevici; Eric Bottard; Mark Fisher; Ilayape
 
 :stream-apps-asciidoc: https://raw.githubusercontent.com/spring-cloud/stream-applications/main/stream-applications-release-train/stream-applications-docs/src/main/asciidoc
 
-:scst-core-version: 3.1.5.RELEASE
+:spring-core-version: 5.3.20
+
+:scst-core-version: 3.2.0
 
 ifdef::backend-html5[]
 
 Version {project-version}
 
-(C) 2012-2021 Pivotal Software, Inc.
+Copyright © 2012-2022
 
 _Copies of this document may be made for your own use and for distribution to
 others, provided that you do not charge any fee for such copies and further
