--- a/README.adoc
+++ b/README.adoc
@@ -36,7 +36,7 @@ The following are the various components of this repository.
 |link:functions/supplier/ftp-supplier/README.adoc[FTP]
 |link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
 |link:functions/consumer/elasticsearch-consumer/README.adoc[Elasticsearch]
-|link:functions/supplier/geode-supplier/README.adoc[Geode]
+// |link:functions/supplier/geode-supplier/README.adoc[Geode]
 |link:functions/function/http-request-function/README.adoc[HTTP Request]
 |link:functions/consumer/file-consumer/README.adoc[File]
 |link:functions/supplier/http-supplier/README.adoc[HTTP]
@@ -44,7 +44,7 @@ The following are the various components of this repository.
 |link:functions/consumer/ftp-consumer/README.adoc[FTP]
 |link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
 |link:functions/function/object-detection-function/README.adoc[Object Detection(Tensorflow)]
-|link:functions/consumer/geode-consumer/README.adoc[Geode]
+// |link:functions/consumer/geode-consumer/README.adoc[Geode]
 |link:functions/supplier/jms-supplier/README.adoc[JMS]
 |link:functions/function/semantic-segmentation-function/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
